front/src/css.css
/* this file is called css.css so that I don't accidentally find it when searching for some _other_ sort of file */

/* global styles ----------------------------------------------------------------------------- */
* {
  outline: none;
  scrollbar-width: none;
}


.dark {
  --background: #1b1b1b;
  --click: rgb(100, 100, 100);
  --text: rgb(246, 246, 246);
  --link: #3f84c0;
  --brackets: #a7b6c2;
  --block-ref: rgb(63, 63, 63);
  --bullet: #879189;
  --border: #afbeca;
  --bar: #565d63;
  --break: #838e97;
  --highlight: rgb(110, 93, 16);
  --page-ref: #2bcc5b;
  --shadow: rgb(98, 98, 98);
  --notification: #2e4736;
  --query-background: #26352a;
  --editing-background: #040404;
  --selected: #2d4a66;
}

.light {
  --background: white;
  --click: rgb(197, 197, 197);
  --text: black;
  --link: rgb(54, 123, 184);
  --brackets: #a7b6c2;
  --block-ref: lightgrey;
  --bullet: #394b59;
  --border: #585e64;
  --bar: #7c858d;
  --shadow: #585e64;
  --break: #a8b4be;
  --highlight: rgb(255, 239, 146);
  --page-ref: rgb(73, 197, 91);
  --notification: #a4d1b1;
  --query-background: #b0dfbd;
  --editing-background:#e6e6e6;
  --selected: #abcdeb;
}

input,
button,
a {
  font-family: "Inter", Ahorani, Verdana;
}

input {
  border: none;
  background-color:var(--background);
  color:var(--text);
}

button {
  appearance: none;
  border: none;
  box-shadow: none;
  cursor: pointer;
  background-color: inherit;
  color: inherit;
  font-size: inherit;
}

span {
  margin: 0;
  padding: 0;
}

::-webkit-scrollbar {
  width: 0%;
  height: 0%;
}

::selection {
  background-color: #85b7e8;
  color: var(--text);
}

body {
  scrollbar-width: 0px;
  font-family: Inter, Aharoni, Verdana;
  font-weight: normal;
  margin: 0;
  color: var(--text);
  background-color: var(--background);
}

a {
  color: var(--link);
}

a:visited {
  color: var(--link);
}

/* Main Vew Styles ------------------------------------------------------------------------*/
/* ----------------------------------------------------------------------------------------*/

/* singular element styles --------------------------------------------------------------------------------------- */

#app {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

#page-frame-outer {
  width: 100%;
  overflow-y: scroll;
}

#page-frame {
  margin: 0 auto 30px;
  max-width: min(900px, 100%);
}

#top-bar {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-content: space-between;
  background-color: var(--background);
}

#top-bar button {
  font-size: 0.9em;
  color:var(--bullet);
  padding: 10px 10px 8px;
}

.top-bar-transition{
  transition: margin-top 0.1s;
}

#top-bar-left,#top-bar-right{
  display:flex;
  flex-direction: row;
}

#top-hamburger{
  padding:7px 6px 2px 4px;
  cursor:pointer;
}

#options-frame{
  position:fixed;
  top:36px;
  right:5px;
  display: flex;
  flex-direction:column;
}

#options-frame button{
  border-radius:4px;
  padding:6px;
  display:block;
}

#create-new-store{
  border-radius:4px;
  padding:6px;
  font-size:1.1em;
}

#search-input {
  background-color: var(--background);
  color: var(--text);
  padding: 3px 13px;
  margin: 5px 3px 4px;
  display: block;
  font-size: 1.1em;
  box-shadow: 0 0 2px var(--bullet);
  border-radius: 100px;
  flex-grow: 1;
}

#search-input::placeholder{
  color:var(--bullet);
}

#autocomplete-list,
#template-list,
#command-list,
#options-frame {
  position: absolute;
  display: flex;
  flex-direction: column;
  background-color: var(--background);
  font-size: 1.3em;
  border-radius: 5px;
  box-shadow: 0 0 8px var(--shadow);
}

.autocomplete__suggestion[data-selected="true"],
.command__suggestion[data-selected="true"],
.template__suggestion[data-selected="true"] {
  background-color: var(--click);
}

.autocomplete__suggestion,
.template__suggestion,
.command__suggestion {
  padding: 7px;
  cursor: pointer;
  border-radius: 5px;
}

#search-result-list {
  position: absolute;
  display: flex;
  flex-direction: column;
  background-color: var(--background);
  font-size: 1.3em;
  border-radius: 5px;
  box-shadow: 0 0 8px var(--shadow);
}

.search-result[data-selected="true"] {
  background-color: var(--click);
}

.search-result {
  padding: 7px;
  cursor: pointer;
  border-radius: 5px;
}


/* Page styles --------------------------------------------------------------------------------------------------- */

.page {
  margin-right: 30px;
  margin-left: 30px;
  position: relative;
}

.page__title {
  font-size: 32px;
  margin: 35px 0 20px 0;
}

.page__body,
.backref-frame__body {
  margin-left: 20px;
}

.backref-list__body {
  margin-left: 10px;
}

.backref-list__title {
  font-size: 1.3em;
  font-weight: bold;
  padding: 20px 0 0;
}

.page-break {
  height: 0px;
  margin: 50px 25px;
  border: 1px solid var(--break);
  border-width: 1px 0 0 0;
}

.block {
  position: relative;
  border-radius: 5px;
}

.block[data-selected="true"] {
  background-color: var(--selected);
}

.block__body {
  padding: 5px 2px;
  white-space: pre-wrap;
}

[data-editingspotlight="true"] .block__body[data-editmode="true"]{
  background-color: var(--editing-background);
  border-radius:4px;
}

.block__bullet {
  cursor: pointer;
  position: absolute;
  left: -21px;
  top: 4px;
}

.block__children {
  margin-left: 22px;
  position:relative;
}
.block__children::before{
  display:block;
  position:absolute;
  /* content: url('data:image/svg+xml; utf8, <svg><line x1="0" y1="0" x2="0" y2="100%" stroke="black" /></svg>'); */
  content:"\200B";
  /* background-image:url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="100"><line x1="0" y1="0" x2="0" y2="100" stroke="grey" /></svg>'); */
  top:0;
  height:100%;
  width:6px;
  /* background-color:var(--border); */
  transform:translateX(-34px);
  border-left: 1px solid var(--bar);
  /* border-width: 0 0 0 1px; */
}

.block-focus-frame {
  margin: 60px 0;
}

.breadcrumb-page {
  cursor: pointer;
}

.breadcrumb-block {
  cursor: pointer;
}

.backref-frame__breadcrumb {
  margin: 15px 0 5px 0;
  font-size: 1.2em;
}

.block-focus-frame__breadcrumb {
  margin: 15px 0 5px 0;
  font-size: 1.2em;
}

/* Parsed block styles -------------------------------------------------------------------------------------- */

.page-ref {
  position: relative;
}

.page-ref__brackets {
  font-weight: lighter;
  color: var(--brackets);
}

.page-ref__body {
  color: var(--page-ref);
  font-weight: 800;
}

.page-ref:hover {
  cursor: pointer;
}

.page-ref:hover > .page-ref__body {
  text-decoration: underline;
}

.tag {
  color: var(--page-ref);
  font-weight: 800;
  position: relative;
}

.tag:hover {
  text-decoration: underline;
  cursor: pointer;
}

.block-ref {
  background-color: var(--block-ref);
}

.block-ref:hover {
  text-decoration: underline;
  cursor: pointer;
}

.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

.highlight {
  background-color: var(--highlight);
  border-radius: 2px;
  padding: 1px;
}

.block-focus-frame {
  margin: 35px 0 0 60px;
}

.url {
  color: var(--link);
  text-decoration: underline;
  cursor: pointer;
}

.literal {
  font-family: "Inconsolata";
  font-size: 1.15em;
}

.code-block {
  font-family: "Inconsolata";
  font-size: 1.15em;
}

.attribute {
  font-weight: bold;
}

.attribute:hover {
  cursor: pointer;
}

.image-embed{
  max-width:100%;
}

.todo-checkbox{
  transform: translateY(1px);
  height:14px;
  width:14px;
  margin:0 2px;
}

.compute-failed{
  background-color:var(--query-background);
  border-radius:4px;
  padding:5px 2px;
  margin-left: -2px;
}

#terminal {
  font-family: "Inconsolata";
  width: 100%;
  padding: 8px;
  background-color: black;
  color: white;
}

.query-frame{
  background-color: var(--query-background);
  border-radius:8px;
  padding:1px 12px 18px;
  margin:3px 0;
}

/* Popup / other view styles  -----------------------------------------------------------*/
/* --------------------------------------------------------------------------------------*/

.notification {
  text-align: center;
  min-width: 300px;
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  top: -40px; /* transitions to more px */
  margin-top: 0px;
  opacity: 1;
  transition: top 0.25s ease-out, opacity 0.2s linear;
  padding: 20px;
  background-color: var(--notification);
  border-radius: 8px;
}

/* Login / Signup styles ------------------------------------------------------------------------*/

#login,
#signup {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--background);
  text-align: center;
}

#login-form,
#signup-form {
  position: fixed;
  top: 28%;
  left: 50%;
  transform: translateX(-50%);
  padding: 13px 20px 20px;
  border-radius: 12px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#login input,
#signup input {
  background-color: var(--background);
  color: var(--text);
  font-size: 1.4em;
  border-radius: 3px;
  display: block;
  padding: 4px;
  margin-bottom: 13px;
}

#login button,
#signup button {
  position: fixed;
  bottom: 19%;
  left: 50%;
  transform: translateX(-50%);
  display: block;
  padding: 4px;
  border-radius: 3px;
  background-color: var(--background);
  color: var(--placeholder);
}
#login button:focus,
#signup button:focus {
  font-weight: bold;
}

#login p,
#signup p {
  left: 50%;
  font-size: 1.7em;
  color: var(--placeholder);
  padding: 4px;
  margin-bottom: 20px;
  margin-top: 65px;
}

#login .exit-to-main, #signup .exit-to-main{
  bottom:9%;
}

.really-want-to{
  padding:80px;
  position:fixed;
  top:30%;
  right:50%;
  transform:translateX(50%);
  background-color:var(--background);
  box-shadow: 0 0 2px var(--shadow);
  border-radius:8px;
  text-align: center;
  /* display:flex; */
  flex-direction: column;
}

.really-want-to button{
  margin-top:30px;
  display:block;
}

